# internal/router/router.go
@@ -9,6 +9,8 @@ func AuthRoutes(router *gin.Engine, controller controller.Auth) {
 	auth := router.Group("/api/auth")
 
 	auth.POST("/register-otp", controller.RegisterOTP)
+	auth.POST("/login", controller.Login)
+	auth.POST("/login-verify", controller.LoginVerify)
 }
 
 func UserRoutes(router *gin.Engine, controller controller.User) {
@@ -16,4 +18,5 @@ func UserRoutes(router *gin.Engine, controller controller.User) {
 
 	user.POST("/register-employee", controller.RegisterEmployee)
 	user.POST("/verify", controller.VerifyUser)
+	user.GET("/list", controller.ListUsers)
 }
